Modal class added to the project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
   </head>
   <body>
     <div class="container-fluid">
-      <ol class="modal-body"></ol>
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <ol class="modal-body mx-3"></ol>
+          </div>
+        </div>
+      </div>
 
       <center>
         <input
